# godot-steam-api

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Godot.cpp  README.md  dev.sh  example.tscn  export_presets.cfg  model.py  out.py  out.txt  project.godot  readme.md  test.py
.github/: smoke.yml  smoke_test.yml
.github/ISSUE_TEMPLATE/: bug-report.md  bug_report.md
.github/workflows/: build.yml  smoke.yml
addons/steam_api/: LICENSE  libsteamsdk-godot.dylib  plugin.gd  readme.md  settings.gd  settings.tres  setup.gd  setup.tscn  steam.gd  steam.tscn  steam_api.gdnlib  steam_callback.gdns  steam_dependecy_libraries.gd  steam_find_leaderboard_result.gdns  steam_friends.gdns  steam_i.gd  steam_leaderboard.gdns  steam_leaderboard_entries.gdns  steam_user.gdns  steam_user_stats.gdns
addons/steam_api/examples/: example.gd  example.tscn
addons/steam_api/gdns/: AccountID_t_box.gdns  AddAppDependencyResult_t_box.gdns  AppProofOfPurchaseKeyResponse_t_box.gdns  AppResumingFromSuspend_t_box.gdns  CCallbackBase_box.gdns  CCallback_func_t_box.gdns  CGameID_GameID_t_box.gdns  CGameID_box.gdns  CGameID_const_reference_box.gdns  CSteamAPIContext_box.gdns  CSteamID_box.gdns  CSteamID_const_reference_box.gdns  CSteamID_pointer_box.gdns  ChangeNumOpenSlotsCallback_t_box.gdns  ClanOfficerListResponse_t_box.gdns  ClientGameServerDeny_t_box.gdns  ControllerAnalogActionHandle_t_box.gdns  ControllerDigitalActionHandle_t_box.gdns  ControllerHandle_t_box.gdns  CreateBeaconCallback_t_box.gdns  DlcInstalled_t_box.gdns  DurationControl_t_box.gdns  EAccountType_box.gdns  EActivateGameOverlayToWebPageMode_box.gdns  EChatRoomEnterResponse_box.gdns  EControllerActionOrigin_box.gdns  EControllerActionOrigin_pointer_box.gdns  EControllerHapticLocation_box.gdns  EDurationControlOnlineState_box.gdns  EDurationControlProgress_box.gdns  EFloatingGamepadTextInputMode_box.gdns  EFriendRelationship_box.gdns  EGamepadTextInputLineMode_box.gdns  EGamepadTextInputMode_box.gdns  EInputSourceMode_box.gdns  EItemPreviewType_pointer_box.gdns  EItemStatistic_box.gdns  EItemUpdateStatus_box.gdns  ELeaderboardSortMethod_box.gdns  ELobbyComparison_box.gdns  (+317 more)
app/: LICENSE  Node2D.gd  Node2D.tscn  export_presets.cfg  project.godot  readme.md
app/addons/steam_api/: LICENSE  plugin.cfg  plugin.gd  setup.gd  setup.tscn  steam.gd  steam_api.gdnlib  steam_api.gdns  steam_apps.gdns  steam_i.gd  steam_id.gdns  steam_leaderboard_entry.gdns  steam_leaderboard_scores_downloaded.gdns  steam_leaderboard_uploaded.gdns  steam_utils.gdns  steamsdk-godot.lib
app/addons/steam_api/examples/: example.gd
app/steam/: run_me_once.gd  steam.gd  steam_api.gdnlib  steam_api.gdns  steam_options.gd
ci/: ci.bash  package.bash
generation/: il.py  model.py  out.py  out_gdscript.py  proc.py  test.py
lib/godot-cpp/: conandata.yml  conanfile.py
libclangtest/: file.cpp  model.py  out.py  test.py  test.sh
src/: Godot.cpp  SteamGodot.cpp  file.cpp  generated.cpp  old.cpp  post.cpp  pre.cpp  readme.md  steam_i.gd
src/gdns/: ActiveBeaconsUpdated_t_box.gdns  AddUGCDependencyResult_t_box.gdns  AppId_t_box.gdns  AudioPlayback_Status_box.gdns  AvailableBeaconLocationsUpdated_t_box.gdns  AvatarImageLoaded_t_box.gdns  CGameID_reference_box.gdns  CSteamGameServerAPIContext_box.gdns  CSteamID_50_box.gdns  CallbackMsg_t_box.gdns  CheckFileSignature_t_box.gdns  ControllerActionSetHandle_t_box.gdns  CreateItemResult_t_box.gdns  DeleteItemResult_t_box.gdns  DepotId_t_box.gdns  DownloadClanActivityCountsResult_t_box.gdns  DownloadItemResult_t_box.gdns  EAuthSessionResponse_box.gdns  EBeginAuthSessionResult_box.gdns  EChatEntryType_pointer_box.gdns  ECheckFileSignature_box.gdns  EDurationControlNotification_box.gdns  EGameSearchErrorCode_t_box.gdns  EHTTPMethod_box.gdns  EHTTPStatusCode_box.gdns  EInputActionOrigin_box.gdns  EInputActionOrigin_pointer_box.gdns  EItemPreviewType_box.gdns  ELeaderboardDataRequest_box.gdns  ELeaderboardDisplayType_box.gdns  ELeaderboardUploadScoreMethod_box.gdns  ELobbyDistanceFilter_box.gdns  EMarketNotAllowedReasonFlags_box.gdns  EMatchMakingServerResponse_box.gdns  ENotificationPosition_box.gdns  EOverlayToStoreFlag_box.gdns  EPlayerResult_t_box.gdns  ERegisterActivationCodeResult_box.gdns  ERemoteStorageFilePathType_pointer_box.gdns  ERemoteStorageLocalFileChange_pointer_box.gdns  (+318 more)
steam/: libsteamsdk-godot.dylib  steam.gd  steam.tscn  steam_user_stats.gdns
